Fix color of bag icon on mobile screens when active

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -210,6 +210,10 @@ input[name='q']::placeholder {
   background-color: #fcffff;
 }
 
+.text-primary {
+  color: #cfb87f !important
+}
+
 /* Carousel Styling */
 
 .carousel,
